--- a/flat_TT_KNN.ipynb
+++ b/flat_TT_KNN.ipynb
@@ -489,6 +489,153 @@
     "\n",
     "    print(f\"✅ GEO-BLEU (sampled test) = {score:.5f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14be00d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City B\n",
+      "Unmasked test data: 3627062 rows\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3d4b64bba534d338dfdadc37a48ff9a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Building TT indices:   0%|          | 0/30000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45fb16c938734c0097fa6037094e67ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Predicting:   0%|          | 0/27000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged rows: 362706, users: 26994\n",
+      "✅ GEO-BLEU (sampled test) = 0.22456\n",
+      "City C\n",
+      "Unmasked test data: 2953708 rows\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2c8eb46cf2444be96ef960bc29b34fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Building TT indices:   0%|          | 0/25000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b51263e32524c19bac259cd68aca417",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Predicting:   0%|          | 0/22000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged rows: 295371, users: 21996\n",
+      "✅ GEO-BLEU (sampled test) = 0.23485\n",
+      "City D\n",
+      "Unmasked test data: 2361882 rows\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9695c5f003a147468e5f046a89fe60ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Building TT indices:   0%|          | 0/20000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "01e7e52d512f430e996bf6b5a3e86a64",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Predicting:   0%|          | 0/17000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged rows: 236188, users: 16997\n",
+      "✅ GEO-BLEU (sampled test) = 0.23771\n"
+     ]
+    }
+   ],
+   "source": [
+    "for city in CITIES:\n",
+    "    print(f\"City {city}\")\n",
+    "    train_data = load_training_data(city)\n",
+    "    test_df, gt_sample = load_test_sample(city, sample_frac=TTKNN_VALUES[\"SAMPLE_FRAC\"])\n",
+    "\n",
+    "    model = FlatTTKNNModel(\n",
+    "        tau=TTKNN_VALUES[\"TAU\"],\n",
+    "        delta=TTKNN_VALUES[\"DELTA\"],\n",
+    "        M=TTKNN_VALUES[\"M\"],\n",
+    "        K=TTKNN_VALUES[\"K\"]\n",
+    "    )\n",
+    "    model.fit(train_data)\n",
+    "\n",
+    "    pred_df = run_prediction(model, test_df, train_data)\n",
+    "    score = evaluate_geobleu(pred_df, gt_sample)\n",
+    "\n",
+    "    print(f\"✅ GEO-BLEU (sampled test) = {score:.5f}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -895,13 +1042,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_d75070ed0db2414f885d05e63035e10e",
-       "max": 147000.0,
-       "min": 0.0,
+       "max": 147000,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0a60d22a31ed4706a1e452292aae2cff",
        "tabbable": null,
        "tooltip": null,
-       "value": 147000.0
+       "value": 147000
       }
      },
      "92fb38a2e30d442a98778386a2397496": {
@@ -921,13 +1068,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_4a5cdc3f11f845adb20835e3d04b98a7",
-       "max": 150000.0,
-       "min": 0.0,
+       "max": 150000,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e9638741a8204e008022e12720cfae53",
        "tabbable": null,
        "tooltip": null,
-       "value": 150000.0
+       "value": 150000
       }
      },
      "a5dcef05581e4195b791b8c6009cec34": {
