SVR | LightGBM + XGBoost | City B + C

--- a/svr(ligthgbm).ipynb
+++ b/svr(ligthgbm).ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36810d46",
+   "id": "6e73e6ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:25:04.016628Z",
-     "iopub.status.busy": "2025-07-24T17:25:04.016218Z",
-     "iopub.status.idle": "2025-07-24T17:25:15.879140Z",
-     "shell.execute_reply": "2025-07-24T17:25:15.878033Z"
+     "iopub.execute_input": "2025-07-25T05:25:30.835631Z",
+     "iopub.status.busy": "2025-07-25T05:25:30.835232Z",
+     "iopub.status.idle": "2025-07-25T05:25:42.537292Z",
+     "shell.execute_reply": "2025-07-25T05:25:42.535881Z"
     },
     "papermill": {
-     "duration": 11.869518,
-     "end_time": "2025-07-24T17:25:15.881379",
+     "duration": 11.708161,
+     "end_time": "2025-07-25T05:25:42.539707",
      "exception": false,
-     "start_time": "2025-07-24T17:25:04.011861",
+     "start_time": "2025-07-25T05:25:30.831546",
      "status": "completed"
     },
     "tags": []
@@ -49,8 +49,8 @@
       "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.11/dist-packages (from mkl_umath->numpy) (2024.2.0)\r\n",
       "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.11/dist-packages (from intel-openmp<2026,>=2024->mkl->numpy) (2024.2.0)\r\n",
       "Collecting git+https://github.com/yahoojapan/geobleu.git\r\n",
-      "  Cloning https://github.com/yahoojapan/geobleu.git to /tmp/pip-req-build-ic3pk5c5\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/yahoojapan/geobleu.git /tmp/pip-req-build-ic3pk5c5\r\n",
+      "  Cloning https://github.com/yahoojapan/geobleu.git to /tmp/pip-req-build-iu9r8_3b\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/yahoojapan/geobleu.git /tmp/pip-req-build-iu9r8_3b\r\n",
       "  Resolved https://github.com/yahoojapan/geobleu.git to commit b0ba925a20deaea20022d9fbbd08f68524754e98\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
       "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from geobleu==0.4) (1.26.4)\r\n",
@@ -68,8 +68,8 @@
       "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.11/dist-packages (from intel-openmp<2026,>=2024->mkl->numpy->geobleu==0.4) (2024.2.0)\r\n",
       "Building wheels for collected packages: geobleu\r\n",
       "  Building wheel for geobleu (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
-      "  Created wheel for geobleu: filename=geobleu-0.4-py3-none-any.whl size=5012 sha256=ef5d52a7f84ee13d9b4714d2eb1ffed9bb69c21f92ee80c4437352f8023e93e8\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-8klk5x92/wheels/97/c3/ec/b654420f0a3507ff7c5234dc42ee565578300e789e6705ec17\r\n",
+      "  Created wheel for geobleu: filename=geobleu-0.4-py3-none-any.whl size=5012 sha256=89299d609fb3c94aebf14b3cd749500679f04835bc8d0f66eeb68a8ce07f7800\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-4cosognp/wheels/97/c3/ec/b654420f0a3507ff7c5234dc42ee565578300e789e6705ec17\r\n",
       "Successfully built geobleu\r\n",
       "Installing collected packages: geobleu\r\n",
       "Successfully installed geobleu-0.4\r\n"
@@ -85,21 +85,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e41cc0db",
+   "id": "0bbe5ad4",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:25:15.889219Z",
-     "iopub.status.busy": "2025-07-24T17:25:15.888910Z",
-     "iopub.status.idle": "2025-07-24T20:35:36.497990Z",
-     "shell.execute_reply": "2025-07-24T20:35:36.495933Z"
+     "iopub.execute_input": "2025-07-25T05:25:42.547716Z",
+     "iopub.status.busy": "2025-07-25T05:25:42.547374Z",
+     "iopub.status.idle": "2025-07-25T16:12:12.610572Z",
+     "shell.execute_reply": "2025-07-25T16:12:12.609510Z"
     },
     "papermill": {
-     "duration": 11420.618794,
-     "end_time": "2025-07-24T20:35:36.503213",
+     "duration": 38790.069875,
+     "end_time": "2025-07-25T16:12:12.612781",
      "exception": false,
-     "start_time": "2025-07-24T17:25:15.884419",
+     "start_time": "2025-07-25T05:25:42.542906",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Processing data from: /kaggle/input/humob-data/15313913/city_D_challengedata.csv ---\n",
-      "--- Starting LightGBM Model Training and Prediction for city_D_challengedata.csv ---\n",
-      "  Training models for 20000 unique users...\n",
-      "  GEO-BLEU Score for city_D_challengedata.csv: 0.1536\n",
-      "  DTW Score for city_D_challengedata.csv: 12.5504\n",
+      "--- Processing data from: /kaggle/input/humob-data/15313913/city_B_challengedata.csv ---\n",
+      "--- Starting LightGBM Model Training and Prediction for city_B_challengedata.csv ---\n",
+      "  Training models for 30000 unique users...\n",
+      "  GEO-BLEU Score for city_B_challengedata.csv: 0.1390\n",
+      "  DTW Score for city_B_challengedata.csv: 13.6996\n",
+      "\n",
+      "--- Processing data from: /kaggle/input/humob-data/15313913/city_C_challengedata.csv ---\n",
+      "--- Starting LightGBM Model Training and Prediction for city_C_challengedata.csv ---\n",
+      "  Training models for 25000 unique users...\n",
+      "  GEO-BLEU Score for city_C_challengedata.csv: 0.1493\n",
+      "  DTW Score for city_C_challengedata.csv: 12.4521\n",
       "\n",
       "==================================================\n",
       "Overall Evaluation Results\n",
       "==================================================\n",
-      "Overall Average GEO-BLEU Score: 0.1536\n",
-      "Overall Average DTW Score: 12.5504\n",
+      "Overall Average GEO-BLEU Score: 0.1442\n",
+      "Overall Average DTW Score: 13.0758\n",
       "\n",
-      "All predicted mobility data saved to /kaggle/working/predicted_mobility_LightGBM_D_sampled100.csv\n",
+      "All predicted mobility data saved to /kaggle/working/combined_predicted_mobility_LightGBM_sampled100.csv\n",
       "\n",
       "All processing, training, prediction, and evaluation complete.\n"
      ]
@@ -165,7 +171,7 @@
     "\n",
     "# List of cities to process. Files are expected to be named like 'city_B_challengedata.csv', etc.\n",
     "# If your files are just 'data.csv', set CITIES = [\"\"] and ensure DATA_DIR points directly to 'data.csv'\n",
-    "CITIES = [\"D\"] # <--- USER: Specify cities to process (e.g., [\"B\"], [\"B\", \"C\"])\n",
+    "CITIES = [\"B\", \"C\"] # <--- USER: Specify cities to process (e.g., [\"B\"], [\"B\", \"C\"])\n",
     "# For very large files, consider processing one city at a time, e.g., CITIES = [\"D\"]\n",
     "\n",
     "# 2. Preprocessing Parameters\n",
@@ -683,14 +689,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11439.704146,
-   "end_time": "2025-07-24T20:35:38.907501",
+   "duration": 38808.820494,
+   "end_time": "2025-07-25T16:12:15.010426",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-07-24T17:24:59.203355",
+   "start_time": "2025-07-25T05:25:26.189932",
    "version": "2.6.0"
   }
  },
