--- a/p9(feature_extraction)/svr(lightgbm).ipynb
+++ b/p9(feature_extraction)/svr(lightgbm).ipynb
@@ -1,81 +1,100 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b97f967",
+   "metadata": {},
+   "source": [
+    "**Goal:** Predict user `(x, y)` coordinates by training a separate model for each individual user, optimizing for large datasets and efficient execution.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edab8a09",
+   "metadata": {},
+   "source": [
+    "## 1. Configuration\n",
+    "\n",
+    "* `DATA_DIR`: Root path of input CSV files.\n",
+    "* `CITIES`: List of city identifiers to process (e.g., `[\"B\", \"C\"]`).\n",
+    "* `MODEL_TYPE`: Machine learning model to use (`'SVR'`, `'LightGBM'`, `'XGBoost'`).\n",
+    "* `SAMPLE_FRACTION_PER_CITY`: Fraction of users to sample from each city to manage data size.\n",
+    "* `HOLIDAYS`: Set of specific day numbers (d) designated as holidays.\n",
+    "* `INTERPOLATION_MAX_GAP_HOURS`: Maximum time gap (in hours) for linear interpolation of missing data.\n",
+    "* `TEST_SIZE_FRACTION`: Proportion of prediction period data (days 61-75) reserved for testing.\n",
+    "* Model-Specific Hyperparameters: `SVR_C`, `SVR_GAMMA`, `LGBM_N_ESTIMATORS`, `LGBM_LEARNING_RATE`, `LGBM_MAX_DEPTH`, `XGB_N_ESTIMATORS`, `XGB_LEARNING_RATE`, `XGB_MAX_DEPTH`, `XGB_N_JOBS`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3da8ff85",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 2. Core Pipeline \n",
+    "\n",
+    "The pipeline processes data city by city, and then user by user within each city.\n",
+    "\n",
+    "* **Initialize Global Score Aggregators:** `all_geobleu_scores`, `all_dtw_scores`, `all_predicted_data_overall`.\n",
+    "\n",
+    "* **For Each `city_file` in `DATA_DIR`:**\n",
+    "    * **Load Data:** Read `uid`, `d`, `t`, `x`, `y` data from `city_file`.\n",
+    "    * **Sample Data (if configured):** If `SAMPLE_FRACTION_PER_CITY < 1.0`, randomly select a fraction of unique `uid`s from `df_city` and keep only their data.\n",
+    "    * **Memory Management:** Explicitly trigger garbage collection (`gc.collect()`).\n",
+    "    * **Feature Extraction:**\n",
+    "        * For each `uid` within the current `df_city`:\n",
+    "            * [cite_start]**Interpolate Missing Values:** Apply linear interpolation to fill gaps in `x` and `y` coordinates to ensure trajectory continuity[cite: 28].\n",
+    "            * **Generate Features:**\n",
+    "                * [cite_start]Time-based: `activity_time`, `day_of_week`, `is_holiday`, `is_weekday`, `am_pm`[cite: 29, 112].\n",
+    "                * [cite_start]Mobility-related: `num_moves`, `avg_travel_dist`, `std_travel_dist`, `avg_travel_angle`, `avg_speed`, `std_speed`[cite: 29, 112].\n",
+    "        * Concatenate user-specific features into `features_df_city`.\n",
+    "    * **Memory Management:** Delete original `df_city` and `gc.collect()`.\n",
+    "\n",
+    "    * **Train & Predict (Per User):**\n",
+    "        * For each unique `uid` in `features_df_city`:\n",
+    "            * **Prepare User Data:** Filter `features_df_city` for the current `uid`.\n",
+    "            * **Split Data:** Separate user data into historical (d<=60) for general training and prediction period (d>=61) for test/validation split.\n",
+    "            * **Scale Features:** Apply `StandardScaler` to training and test features.\n",
+    "            * [cite_start]**Initialize Models:** Create two independent models (`model_x_user`, `model_y_user`) based on `MODEL_TYPE` and specified hyperparameters[cite: 57].\n",
+    "            * **Train Models:** Fit `model_x_user` and `model_y_user` using the combined training data for the current user. Suppress model output/warnings during training for cleaner logs.\n",
+    "            * **Predict:** Use `model_x_user` and `model_y_user` to predict `x_predicted` and `y_predicted` for the user's test data.\n",
+    "            * **Collect Results:** Store `uid`, `d`, `t`, `x_actual`, `y_actual`, `x_predicted`, `y_predicted` for this user.\n",
+    "            * **Memory Management:** Delete user-specific models and data, `gc.collect()`.\n",
+    "        * Concatenate all collected actual and predicted results for the current city into `actual_test_data_city` and `predicted_test_data_city`.\n",
+    "\n",
+    "    * **Evaluate City Performance:**\n",
+    "        * Merge `actual_test_data_city` and `predicted_test_data_city` to ensure alignment by `uid`, `d`, `t`.\n",
+    "        * Prepare trajectory lists for `geobleu` library (list of `(uid, d, t, x, y)` tuples for each user's trajectory).\n",
+    "        * **Calculate Metrics:** For each user's trajectory pair:\n",
+    "            * [cite_start]`calc_geobleu_single()`: Calculates GEO-BLEU score[cite: 127, 129].\n",
+    "            * [cite_start]`calc_dtw_single()`: Calculates DTW score[cite: 127, 132].\n",
+    "        * Calculate the mean GEO-BLEU and DTW scores for the current city.\n",
+    "        * Add these mean scores to `all_geobleu_scores` and `all_dtw_scores`.\n",
+    "        * Store `predicted_test_data_city` into `all_predicted_data_overall`.\n",
+    "\n",
+    "* **Final Overall Results:**\n",
+    "    * Calculate and print the `Overall Average GEO-BLEU Score` (mean of `all_geobleu_scores`).\n",
+    "    * Calculate and print the `Overall Average DTW Score` (mean of `all_dtw_scores`).\n",
+    "    * **Save Predictions:** Concatenate all `all_predicted_data_overall` into a single DataFrame and save it to a CSV file in `/kaggle/working/`, with a filename indicating the model, cities, and sampling fraction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39d9c56b",
+   "metadata": {},
+   "source": [
+    "## Install Required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6e73e6ce",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-07-25T05:25:30.835631Z",
-     "iopub.status.busy": "2025-07-25T05:25:30.835232Z",
-     "iopub.status.idle": "2025-07-25T05:25:42.537292Z",
-     "shell.execute_reply": "2025-07-25T05:25:42.535881Z"
-    },
-    "papermill": {
-     "duration": 11.708161,
-     "end_time": "2025-07-25T05:25:42.539707",
-     "exception": false,
-     "start_time": "2025-07-25T05:25:30.831546",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.3)\r\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (1.26.4)\r\n",
-      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.11/dist-packages (1.2.2)\r\n",
-      "Requirement already satisfied: lightgbm in /usr/local/lib/python3.11/dist-packages (4.5.0)\r\n",
-      "Requirement already satisfied: xgboost in /usr/local/lib/python3.11/dist-packages (2.0.3)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (2.9.0.post0)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.2)\r\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.2)\r\n",
-      "Requirement already satisfied: mkl_fft in /usr/local/lib/python3.11/dist-packages (from numpy) (1.3.8)\r\n",
-      "Requirement already satisfied: mkl_random in /usr/local/lib/python3.11/dist-packages (from numpy) (1.2.4)\r\n",
-      "Requirement already satisfied: mkl_umath in /usr/local/lib/python3.11/dist-packages (from numpy) (0.1.1)\r\n",
-      "Requirement already satisfied: mkl in /usr/local/lib/python3.11/dist-packages (from numpy) (2025.2.0)\r\n",
-      "Requirement already satisfied: tbb4py in /usr/local/lib/python3.11/dist-packages (from numpy) (2022.2.0)\r\n",
-      "Requirement already satisfied: mkl-service in /usr/local/lib/python3.11/dist-packages (from numpy) (2.4.1)\r\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.11/dist-packages (from scikit-learn) (1.15.3)\r\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from scikit-learn) (1.5.1)\r\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn) (3.6.0)\r\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\r\n",
-      "Requirement already satisfied: intel-openmp<2026,>=2024 in /usr/local/lib/python3.11/dist-packages (from mkl->numpy) (2024.2.0)\r\n",
-      "Requirement already satisfied: tbb==2022.* in /usr/local/lib/python3.11/dist-packages (from mkl->numpy) (2022.2.0)\r\n",
-      "Requirement already satisfied: tcmlib==1.* in /usr/local/lib/python3.11/dist-packages (from tbb==2022.*->mkl->numpy) (1.4.0)\r\n",
-      "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.11/dist-packages (from mkl_umath->numpy) (2024.2.0)\r\n",
-      "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.11/dist-packages (from intel-openmp<2026,>=2024->mkl->numpy) (2024.2.0)\r\n",
-      "Collecting git+https://github.com/yahoojapan/geobleu.git\r\n",
-      "  Cloning https://github.com/yahoojapan/geobleu.git to /tmp/pip-req-build-iu9r8_3b\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/yahoojapan/geobleu.git /tmp/pip-req-build-iu9r8_3b\r\n",
-      "  Resolved https://github.com/yahoojapan/geobleu.git to commit b0ba925a20deaea20022d9fbbd08f68524754e98\r\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from geobleu==0.4) (1.26.4)\r\n",
-      "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (from geobleu==0.4) (1.15.3)\r\n",
-      "Requirement already satisfied: mkl_fft in /usr/local/lib/python3.11/dist-packages (from numpy->geobleu==0.4) (1.3.8)\r\n",
-      "Requirement already satisfied: mkl_random in /usr/local/lib/python3.11/dist-packages (from numpy->geobleu==0.4) (1.2.4)\r\n",
-      "Requirement already satisfied: mkl_umath in /usr/local/lib/python3.11/dist-packages (from numpy->geobleu==0.4) (0.1.1)\r\n",
-      "Requirement already satisfied: mkl in /usr/local/lib/python3.11/dist-packages (from numpy->geobleu==0.4) (2025.2.0)\r\n",
-      "Requirement already satisfied: tbb4py in /usr/local/lib/python3.11/dist-packages (from numpy->geobleu==0.4) (2022.2.0)\r\n",
-      "Requirement already satisfied: mkl-service in /usr/local/lib/python3.11/dist-packages (from numpy->geobleu==0.4) (2.4.1)\r\n",
-      "Requirement already satisfied: intel-openmp<2026,>=2024 in /usr/local/lib/python3.11/dist-packages (from mkl->numpy->geobleu==0.4) (2024.2.0)\r\n",
-      "Requirement already satisfied: tbb==2022.* in /usr/local/lib/python3.11/dist-packages (from mkl->numpy->geobleu==0.4) (2022.2.0)\r\n",
-      "Requirement already satisfied: tcmlib==1.* in /usr/local/lib/python3.11/dist-packages (from tbb==2022.*->mkl->numpy->geobleu==0.4) (1.4.0)\r\n",
-      "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.11/dist-packages (from mkl_umath->numpy->geobleu==0.4) (2024.2.0)\r\n",
-      "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.11/dist-packages (from intel-openmp<2026,>=2024->mkl->numpy->geobleu==0.4) (2024.2.0)\r\n",
-      "Building wheels for collected packages: geobleu\r\n",
-      "  Building wheel for geobleu (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
-      "  Created wheel for geobleu: filename=geobleu-0.4-py3-none-any.whl size=5012 sha256=89299d609fb3c94aebf14b3cd749500679f04835bc8d0f66eeb68a8ce07f7800\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-4cosognp/wheels/97/c3/ec/b654420f0a3507ff7c5234dc42ee565578300e789e6705ec17\r\n",
-      "Successfully built geobleu\r\n",
-      "Installing collected packages: geobleu\r\n",
-      "Successfully installed geobleu-0.4\r\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "f795a5b8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# You typically run installation commands in a separate code cell at the beginning of your notebook:\n",
     "!pip install pandas numpy scikit-learn lightgbm xgboost\n",
@@ -83,57 +102,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80e67b7b",
+   "metadata": {},
+   "source": [
+    "## Import Libraries and Set User-Configurable Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0bbe5ad4",
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2025-07-25T05:25:42.547716Z",
-     "iopub.status.busy": "2025-07-25T05:25:42.547374Z",
-     "iopub.status.idle": "2025-07-25T16:12:12.610572Z",
-     "shell.execute_reply": "2025-07-25T16:12:12.609510Z"
-    },
-    "papermill": {
-     "duration": 38790.069875,
-     "end_time": "2025-07-25T16:12:12.612781",
-     "exception": false,
-     "start_time": "2025-07-25T05:25:42.542906",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Processing data from: /kaggle/input/humob-data/15313913/city_B_challengedata.csv ---\n",
-      "--- Starting LightGBM Model Training and Prediction for city_B_challengedata.csv ---\n",
-      "  Training models for 30000 unique users...\n",
-      "  GEO-BLEU Score for city_B_challengedata.csv: 0.1390\n",
-      "  DTW Score for city_B_challengedata.csv: 13.6996\n",
-      "\n",
-      "--- Processing data from: /kaggle/input/humob-data/15313913/city_C_challengedata.csv ---\n",
-      "--- Starting LightGBM Model Training and Prediction for city_C_challengedata.csv ---\n",
-      "  Training models for 25000 unique users...\n",
-      "  GEO-BLEU Score for city_C_challengedata.csv: 0.1493\n",
-      "  DTW Score for city_C_challengedata.csv: 12.4521\n",
-      "\n",
-      "==================================================\n",
-      "Overall Evaluation Results\n",
-      "==================================================\n",
-      "Overall Average GEO-BLEU Score: 0.1442\n",
-      "Overall Average DTW Score: 13.0758\n",
-      "\n",
-      "All predicted mobility data saved to /kaggle/working/combined_predicted_mobility_LightGBM_sampled100.csv\n",
-      "\n",
-      "All processing, training, prediction, and evaluation complete.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "3357f832",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -215,9 +196,24 @@
     "# Fraction of data to sample per city before feature extraction.\n",
     "# Set to 1.0 to use all data (might cause Out-Of-Memory for large files).\n",
     "# Start with a small fraction (e.g., 0.1 or 0.05) if you encounter OOM errors.\n",
-    "SAMPLE_FRACTION_PER_CITY = 1 # <--- USER: Fraction of data to sample per city (e.g., 0.1 for 10%)\n",
-    "\n",
-    "\n",
+    "SAMPLE_FRACTION_PER_CITY = 1 # <--- USER: Fraction of data to sample per city (e.g., 0.1 for 10%)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8512cad0",
+   "metadata": {},
+   "source": [
+    "## Helper Functions for Data Loading and File Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5f962d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==============================================================================\n",
     "# Helper Functions for Data Loading and File Selection\n",
     "# ==============================================================================\n",
@@ -249,8 +245,24 @@
     "    df['x'] = df['x'].astype(float)\n",
     "    df['y'] = df['y'].astype(float)\n",
     "    df = df.sort_values(['uid', 'd', 't'])\n",
-    "    return df\n",
-    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9d09c19",
+   "metadata": {},
+   "source": [
+    "## Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48ca45f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ---- Step 2: Feature Extraction ----\n",
     "class FeatureExtractor:\n",
     "    \"\"\"\n",
@@ -344,8 +356,24 @@
     "            current_group = current_group.drop(columns=['datetime'])\n",
     "            features.append(current_group)\n",
     "\n",
-    "        return pd.concat(features, ignore_index=True)\n",
-    "\n",
+    "        return pd.concat(features, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11cbdb73",
+   "metadata": {},
+   "source": [
+    "## Model Training and Prediction (Per User)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dab237cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ---- Step 3: Model Training and Prediction (Per User) ----\n",
     "@contextmanager\n",
     "def suppress_stdout_stderr():\n",
@@ -473,8 +501,24 @@
     "    final_actual_data = pd.concat(all_actual_data, ignore_index=True) if all_actual_data else pd.DataFrame()\n",
     "    final_predicted_data = pd.concat(all_predicted_data, ignore_index=True) if all_predicted_data else pd.DataFrame()\n",
     "\n",
-    "    return final_actual_data, final_predicted_data\n",
-    "\n",
+    "    return final_actual_data, final_predicted_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d290f26d",
+   "metadata": {},
+   "source": [
+    "## Main Execution Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffe0495a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ---- Main Execution Function ----\n",
     "def main():\n",
     "    \"\"\"\n",
@@ -650,7 +694,7 @@
     "\n",
     "# Entry point for the script\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
@@ -671,7 +715,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -685,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.3"
   },
   "papermill": {
    "default_parameters": {},
